--- a/style.css
+++ b/style.css
@@ -1,43 +1,49 @@
 body{
-    background-color: rgb(41, 37, 37)
+    background-color: #4f4f4f;
+}
+
+h3{
+    font-family: sans-serif;
+    text-align: center;
+    color: white;
+}
+
+h2{
+    font-family: sans-serif;
+    text-align: center;
+    color: white;
 }
 
 h1{
     font-family: sans-serif;
+    text-align: center;
     color: white;
-    text-shadow: 2px 2px red;
 }
 
 p{
     font-family: sans-serif;
+    text-align: center;
     color: white;
 }
+
+a{
+    color: white;
+}
+
 
 .header{
-    position: fixed;
-    padding: 5px;
-    text-align: center;
-    background: rgb(46, 42, 42);
-    color: white;
-    font-size: 125%;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: auto;
-    margin: -10 auto;
-}
-
-.footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgb(46, 42, 42);
-    color: white;
-    text-align: center;
+    background: #383838;
+    border: 2px solid black;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
 }
 
 .content{
-    text-align: center;
-    
+    border: 2px hidden black;
+    margin-top: 10px;
+    width: 550px;
+    height: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
