--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ a{
 .header{
     background: #383838;
     border: 2px solid black;
+    padding: 10px;
     margin-top: -10px;
     margin-left: -10px;
     margin-right: -10px;
