--- a/style.css
+++ b/style.css
@@ -33,16 +33,14 @@ a{
 
 .header{
     background: #383838;
-    border: 2px solid black;
-    padding: 10px;
-    margin-top: -10px;
-    margin-left: -10px;
-    margin-right: -10px;
+    border-bottom: 2px solid black;
+    padding: .2%;
+    margin: -10px;
 }
 
 .content{
     border: 2px hidden black;
-    margin-top: 10px;
+    margin-top: 50px;
     width: 550px;
     height: fit-content;
     margin-left: auto;
