--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a{
     background: #383838;
     border-bottom: 2px solid black;
     padding: .2%;
-    margin: -10px;
+    margin: -8px;
 }
 
 .content{
@@ -46,3 +46,13 @@ a{
     margin-left: auto;
     margin-right: auto;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  }
