--- a/index.css
+++ b/index.css
@@ -23,3 +23,28 @@ h1{
 span{
     color: #ffffff;
 }
+
+/* the other pages css (study what ever is below since i dont understand it) */
+
+ul{
+    width: auto;
+    float: right;
+    margin-top: 8px;
+}
+
+li{
+    display: inline-block;
+    padding: 15px 30px;
+}
+
+a{
+    text-align: center;
+    color: #ffffff;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: 1.2vw;
+}
+
+a:hover{
+    color: red;
+}
