--- a/index.css
+++ b/index.css
@@ -50,3 +50,11 @@ a:hover{
 }
 
 /* the other pages css (study what ever is above since i dont understand it) */
+
+
+
+p{
+    text-align: center;
+    font-family: sans-serif;
+    color: white;
+}
