--- a/index.css
+++ b/index.css
@@ -58,3 +58,12 @@ p{
     font-family: sans-serif;
     color: white;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+  }
