--- a/index.css
+++ b/index.css
@@ -1,110 +1,11 @@
-body, html{
-    margin: 0;
-    padding: 0;
-    background-color: #1a1a1a;
-}
-
-header{
-    width: 100%;
-    height: 7%;
-    background-color: #282828;
-}
-
 h1{
-    position: absolute;
-    padding: 3px;
-    float: left;
-    margin-left: 2%;
-    margin-top: 10px;
-    font-family: sans-serif;
-    color: red;
+  text-align: center;
+  margin-top: 10%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-span{
-    color: #ffffff;
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-/* the other pages css (study what ever is below since i dont understand it) */
-
-ul{
-    width: auto;
-    float: right;
-    margin-top: 8px;
-}
-
-li{
-    display: inline-block;
-    padding: 15px 30px;
-}
-
-a{
-    text-align: center;
-    color: #ffffff;
-    text-decoration: none;
-    font-family: sans-serif;
-    font-size: 1.2vw;
-}
-
-a:hover{
-    color: red;
-}
-
-.logo{
-  position: absolute;
-  margin-top: 17px;
-  margin-left: 6px;
-}
-
-/* the other pages css (study what ever is above since i dont understand it) */
-
-
-
-p{
-    text-align: center;
-    font-family: sans-serif;
-    color: white;
-}
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: white;
-    text-align: center;
-  }
-
-/* important stuff for rows and columns and putting stuff in order below */
-
-  .row {
-    display: flex;
-  }
-  
-  .column {
-    flex: 33.33%;
-    padding: 5px;
-  }
-
-
-
-/* SCROLL BAR BELOW  */
-
-::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #242424; 
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #853939; 
-    border-radius: 5px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #700000; 
-  }
