--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-h1{
+/* h1{
   text-align: center;
   margin-top: 10%;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -8,4 +8,4 @@ img{
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
+} */
