--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ img{
 } */
 
 body{
-  background-color: rgb(41, 37, 37);
+  background-color: rgb(238, 238, 238, 0.1);;
 }
 
 .sectionLeft{
@@ -84,3 +84,10 @@ body{
   width: 15%;
 }
 
+.sectionFooter{
+  margin-top: 31%;
+}
+
+.unselectable{
+  user-select: none;
+}
