--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.text404{
+/* .text404{
   text-align: center;
   margin-top: 10%;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -8,7 +8,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
 body{
   background-color: rgb(238, 238, 238, 0.1);;
