--- a/index.css
+++ b/index.css
@@ -1,14 +1,14 @@
-/* .text404{
+.h1{
   text-align: center;
   margin-top: 10%;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.img404{
+.img{
   display: block;
   margin-left: auto;
   margin-right: auto;
-} */
+}
 
 body{
   background-color: rgb(238, 238, 238, 0.1);;
