--- a/index.css
+++ b/index.css
@@ -1,9 +1,3 @@
-.fontoptions{
-    float: left;
-    width: 80%;
-  }
-
-.coloroptions{
-    float: right;
-    width: 20%;
+h1 {
+  margin-top: auto;
 }
