--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ body{
   margin-top: 20px;
   text-align: center;
   background-color: #242424;
+  width: 50%;
 }
 
 /*make this left/right in the future, but for now main column since theres nothing on the left or right.*/
