--- a/index.css
+++ b/index.css
@@ -1,35 +1,16 @@
 body{
-  padding: 20px;
-  background-color: #2e2e2e;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
+    background-color: #202B26;
 }
 
 .header{
   margin: auto;
+  margin-top: 10px;
   padding: 20px;
-  font-size: 30px;
+  font-size: 20px;
   text-align: center;
-  background-color: #242424;
-  width: 50%;
-}
-
-.box{
-  margin: auto;
-  margin-top: 20px;
-  padding: 20px;
-  float: center;
-  width: 30%;
-  background-color: #242424;
-}
-
-.main_box{
-  margin: auto;
-  margin-top: 20px;
-  padding: 20px;
-  float: center;
-  width: 45%;
-  background-color: #242424;
+  background-color: #27402D;
+  border-radius: 25px;
+  width: 35%;
 }
 
 .footer{
@@ -37,9 +18,64 @@ body{
   padding: 20px;
   margin-top: 20px;
   text-align: center;
-  background-color: #242424;
-  width: 50%;
+  background-color: #27402D;
+  border-radius: 25px;
+  width: 35%;
 }
+
+#loader{
+    border: 15px solid#5EFFB4;
+    /* box-shadow: 0 0 8px aquamarine, 0 0 8px aquamarine inset; */
+    box-shadow:0 0 10px #B0FF66, 0 0 10px #B0FF66 inset;
+    border-radius: 0%;
+    height: 25px;
+    width: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+
+    animation: spinning 2s linear infinite;
+}
+
+@keyframes spinning{
+    0%{
+        transform:rotate(0deg);
+    }
+    50%{
+    }
+    100%{
+        transform:rotate(360deg);
+    }
+}
+
+#mainDiv {
+  display: none;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+}
+
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+}
+@keyframes animatebottom { 
+  from{ bottom:-100px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
+
+
+
+
+
+
+
+
+
 
 /*NAV BAR STUFF BELOW*/
 /*NAV BAR STUFF BELOW*/
@@ -50,8 +86,9 @@ ul {
   list-style-type: none;
   margin: auto;
   width: 35%;
-  background-color: #1C1C1C;
+  background-color: #315C3E;
   padding: 10px;
+
 }
 
 li {
@@ -74,7 +111,7 @@ a{
 }
 
 a:hover{
-  color: red;
+  color: #33BF69;
 }
 a:active{
   color: black;
@@ -83,54 +120,3 @@ a:active{
 /*NAV BAR STUFF ABOVE*/
 /*NAV BAR STUFF ABOVE*/
 /*NAV BAR STUFF ABOVE*/
-
-
-
-/*make this left/right in the future, but for now main column since theres nothing on the left or right.*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*example css below for a blog - BE YOURSELF DONT TAKE FROM OTHERS (note to self (bunker) (dont be a skid))*/
-
-
-/* body {
-  font-family: Arial;
-  padding: 20px;
-  background: #f1f1f1;
-}
-
-.header {
-  padding: 30px;
-  font-size: 40px;
-  text-align: center;
-  background: white;
-}
-
-.leftcolumn {
-  float: center;
-  width: 75%;
-}
-
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-  margin-top: 20px;
-} */
